infrastructure/k8s/dev/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: fivejars
  labels:
    name: fivejars-backend
    pod-security.kubernetes.io/enforce: restricted # Enforce High Security Standard
